--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@uiw/react-md-editor": "^3.20.0",
     "firebase": "^9.12.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.0",
+    "react-quilljs": "^1.3.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
